--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -5,13 +5,9 @@
 		<meta http-equiv="Content-type" content="text/html; charset=utf-8">
 		<meta name="viewport" id="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
 		
-
-
 		<script type="text/javascript" charset="utf-8" src="phonegap-nfc.js"></script>
 
 
-		<link rel="stylesheet" href="jquery.mobile-1.3.1.css">
-		<script type="text/javascript" src="jquery.mobile/jquery-1.6.4.min.js"></script>
 		
 
 		<script type="text/javascript" charset="utf-8" src="cordova-2.6.0.js"></script> 
@@ -39,6 +35,13 @@
 			<input type="text" name="topup_value" value="0" style="text-align:center"><br>
 			<input type="submit" value="Add Credit">
 		</form>
+		
+		<form >
+
+			<button name="button" type="button"><a href="cart.html">Payment Cart</a></button>
+		</form>
+		
+		
 		</center>
 
 
