--- a/assets/www/cart.html
+++ b/assets/www/cart.html
@@ -15,13 +15,25 @@
   </header>
   
   <section class="main">
-    <h1>Cart</h1>
+      <div class="resources">
+        <span class="left resource">
+          <a href="#" id="beers" data-value="2.00" data-type="beers" class="btn btn-primary btn-large btn-block">Beer (&euro; 2.00)</a>
+        </span>
+        <span class="right resource">
+          <a href="#" id="pizza" data-value="4.00" data-type="pizza" class="btn btn-primary btn-large btn-block">Pizza (&euro; 4.00)</a>
+        </span>
+        <span class="left resource">
+          <a href="#" id="burger" data-value="3.00" data-type="burger" class="btn btn-primary btn-large btn-block">Burger (&euro; 3.00)</a>
+        </span>
+        <span class="right resource">
+          <a href="#" id="sausage" data-value="2.00" data-type="burger" class="btn btn-primary btn-large btn-block">Sausage (&euro; 2.00)</a>
+        </span>
+    </div>
     
-    <a href="#" id="beers" data-value="2.00" data-type="beers" class="btn btn-primary btn-large btn-block">Beer (&euro; 2.00)</a>
-    <button id="pizza" data-value="4.00" data-type="pizza">Pizza (&euro; 4.00)</button>
-    <button id="burger" data-value="3.00" data-type="burger">Burger (&euro; 3.00)</button>
-    <button id="sausage" data-value="2.00" data-type="burger">Sausage (&euro; 2.00)</button>
-    
-    <button id="pay">Pay</button>
+    <footer class="b_fixed">
+  	  <ul class="form_footer_buttons">
+  		  <li><a href="#" id="pay">Pay</a></li>
+  	  </ul>
+  	</footer>
   </section>
 </div>
