post hackathon commit

--- a/assets/www/cart.html
+++ b/assets/www/cart.html
@@ -11,22 +11,22 @@
 
 <div class="container">
   <header class="logo">
-    <a href="/"><img src="images/logo1.png" /></a>
+    //<a href="/"><img src="images/logo1.png" /></a>
   </header>
   
   <section class="main">
-      <div class="resources">
+      <div class="">
         <span class="left resource">
-          <a href="#" id="beers" data-value="2.00" data-type="beers" class="btn btn-primary btn-large btn-block">Beer (&euro; 2.00)</a>
+          <button id="beers" data-value="2.00" class="btn btn-primary btn-large btn-block">Beer (&euro; 2.00)</a>
         </span>
         <span class="right resource">
-          <a href="#" id="pizza" data-value="4.00" data-type="pizza" class="btn btn-primary btn-large btn-block">Pizza (&euro; 4.00)</a>
+          <button id="pizza" data-value="4.00" class="btn btn-primary btn-large btn-block">Pizza (&euro; 4.00)</a>
         </span>
         <span class="left resource">
-          <a href="#" id="burger" data-value="3.00" data-type="burger" class="btn btn-primary btn-large btn-block">Burger (&euro; 3.00)</a>
+          <button id="burger" data-value="3.00" class="btn btn-primary btn-large btn-block">Burger (&euro; 3.00)</a>
         </span>
         <span class="right resource">
-          <a href="#" id="sausage" data-value="2.00" data-type="burger" class="btn btn-primary btn-large btn-block">Sausage (&euro; 2.00)</a>
+          <button id="sausage" data-value="2.00"  class="btn btn-primary btn-large btn-block">Sausage (&euro; 2.00)</a>
         </span>
     </div>
     
