--- a/assets/www/cart.html
+++ b/assets/www/cart.html
@@ -4,6 +4,7 @@
 <!-- <script src="http://code.jquery.com/mobile/1.3.1/jquery.mobile-1.3.1.min.js"></script> -->
 <script type="text/javascript" charset="utf-8" src="phonegap-nfc.js"></script>
 <script type="text/javascript" charset="utf-8" src="cordova-2.6.0.js"></script> 
+<script type="text/javascript" charset="utf-8" src="check_credit.js"></script> 		
 
 <script type="text/javascript" charset="utf-8" src="cart.js"></script> 
 <script type="text/javascript" charset="utf-8" src="nfc.js"></script> 
