--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -26,7 +26,7 @@
   <body onload="onBodyLoad();">
     <div class="container">
 	    <header class="logo">
-        <a href="/"><img src="images/logo1.png" /></a>
+        <a href="index.html"><img src="images/logo1.png" /></a>
 		  </header>
 
       <section class="main">        
