Cart html changes

--- a/assets/www/cart.html
+++ b/assets/www/cart.html
@@ -12,24 +12,14 @@
 
 <div class="container">
   <header class="logo">
-    //<a href="/"><img src="images/logo1.png" /></a>
+    <a href="index.html"><img src="images/logo1.png" /></a>
   </header>
   
   <section class="main">
-      <div class="">
-        <span class="left resource">
-          <button id="beers" data-value="2.00" class="btn btn-primary btn-large btn-block">Beer (&euro; 2.00)</a>
-        </span>
-        <span class="right resource">
-          <button id="pizza" data-value="4.00" class="btn btn-primary btn-large btn-block">Pizza (&euro; 4.00)</a>
-        </span>
-        <span class="left resource">
-          <button id="burger" data-value="3.00" class="btn btn-primary btn-large btn-block">Burger (&euro; 3.00)</a>
-        </span>
-        <span class="right resource">
-          <button id="sausage" data-value="2.00"  class="btn btn-primary btn-large btn-block">Sausage (&euro; 2.00)</a>
-        </span>
-    </div>
+    <button id="beers" data-value="2.00" class="btn btn-primary btn-large btn-block">Beer (&euro; 2.00)</a>
+    <button id="burger" data-value="3.00" class="btn btn-primary btn-large btn-block">Burger (&euro; 3.00)</a>
+    <button id="pizza" data-value="4.00" class="btn btn-primary btn-large btn-block">Pizza (&euro; 4.00)</a>
+    <button id="sausage" data-value="2.00"  class="btn btn-primary btn-large btn-block">Sausage (&euro; 2.00)</a>
     
     <footer class="b_fixed">
   	  <ul class="form_footer_buttons">
