euro button added to the cart

--- a/assets/www/cart.html
+++ b/assets/www/cart.html
@@ -33,6 +33,8 @@
   	  		<ul class="form_footer_buttons">
   	  		  <li><span id="cartValue">Cart Empty</span></li>
   		  		<li><a href="#" id="pay">Pay</a></li>
+				<li><a href="index.html">Main Menu</a></li>
+				
   	  		</ul>
   		</footer>
 	  </section>
