--- a/assets/www/add_credit.html
+++ b/assets/www/add_credit.html
@@ -1,25 +1,21 @@
 <html>
 	<head>
+	
+		<!-- Generic headers - stylessheets and JS files -->
 		<meta http-equiv="Content-type" content="text/html; charset=utf-8">
 		<meta name="viewport" id="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
-		
 		<link rel="stylesheet" type="text/css" href="style.css" />
-		
 		<script type="text/javascript" charset="utf-8" src="phonegap-nfc.js"></script>
 		<script type="text/javascript" charset="utf-8" src="cordova-2.6.0.js"></script> 
+		<script type="text/javascript" charset="utf-8" src="cookie.js"></script>
 		<script type="text/javascript" charset="utf-8" src="nfc.js"></script> 		
+		
+		
+		<!-- Specific Headers -->
 		<script type="text/javascript" charset="utf-8" src="add_credit.js"></script> 		
 
-		<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-		<script src="http://code.jquery.com/jquery-migrate-1.1.1.min.js"></script>
-		
-		<script type="text/javascript" charset="utf-8">
-  		function onDeviceReady() {
-  			nfc.addNdefListener(current_credit,successTagRead,failedTagRead);
-  		}		
-    	function onBodyLoad() {   
-    		document.addEventListener("deviceready", onDeviceReady, true);			
-    	}	
+				
+			
     </script>
   </head>
   <body onload="onBodyLoad();">
