--- a/assets/www/add_credit_tap_load.html
+++ b/assets/www/add_credit_tap_load.html
@@ -34,12 +34,11 @@
 	<h2 id="topupValue"></h2>
 	<h2 id="newValue"></h2>
 
-	<button id="revert" onclick="revertTransaction()" >Revert</button>
+	<button id="revert">Revert</button>
 	<footer class="b_fixed">
-  	  		<ul class="form_footer_buttons">
-  	  			<li><a href="index.html">Main Menu</a></li>
-				
-  	  		</ul>
+  	  	<ul class="form_footer_buttons">
+	  	  	<li><a href="index.html">Main Menu</a></li>		
+  	  	</ul>
   	</footer>
   	
  </body>
