--- a/assets/www/cart.html
+++ b/assets/www/cart.html
@@ -30,12 +30,26 @@
   
     <section class="main"> 
     	<div class="menu_list">
-      	<button id="beers" data-value="2.00" class="form_list"><span class="quantity">90</span> Beer (&euro; 2.00)</button>
-      	<button id="burger" data-value="3.00" class="form_list"><span class="quantity">00</span> Burger (&euro; 3.00)</button>
-      	<button id="chocolate" data-value="1.00" class="form_list"><span class="quantity">00</span> Chocolate (&euro; 1.00)</button>
-       	<button id="pizza" data-value="4.00" class="form_list"><span class="quantity">10</span> Pizza (&euro; 4.00)</button>
-      	<button id="sausage" data-value="2.00"  class="form_list"><span class="quantity">00</span> Sausage (&euro; 2.00)</button>
-      	<button id="soda" data-value="1.00"  class="form_list"><span class="quantity">00</span> Soda (&euro; 1.00)</button>
+      	<button id="beers" data-value="2.00" class="form_list selected_product">
+        	<span class="quantity">90</span> Beer (&euro; 2.00)
+        	<span class="delete_product"><a href="#" title="Delete Product?"><i class="icon-minus"></i></a></span>
+        </button>
+      	<button id="burger" data-value="3.00" class="form_list">
+        	<span class="quantity">00</span> Burger (&euro; 3.00)
+        </button>
+      	<button id="chocolate" data-value="1.00" class="form_list">
+        	<span class="quantity">00</span> Chocolate (&euro; 1.00)
+        </button>
+       	<button id="pizza" data-value="4.00" class="form_list selected_product">
+       	  <span class="quantity">10</span> Pizza (&euro; 4.00)
+       	  <span class="delete_product"><a href="#" title="Delete Product?"><i class="icon-minus"></i></a></span>
+       	</button>
+      	<button id="sausage" data-value="2.00"  class="form_list">
+        	<span class="quantity">00</span> Sausage (&euro; 2.00)
+        </button>
+      	<button id="soda" data-value="1.00"  class="form_list">
+        	<span class="quantity">00</span> Soda (&euro; 1.00)
+        </button>
     	</div>    
     
     	<!--
