finished all the keynote styles

--- a/assets/www/cart_credit_thanks.html
+++ b/assets/www/cart_credit_thanks.html
@@ -34,12 +34,16 @@
 		</nav>
 		
 		<header id="main_bar">
-		  <span id="section_title">Check Credit</span>
+		  <span id="section_title">Store - Thank You</span>
 			<span class="f-left button"><button id="showLeftPush"><i class="icon-reorder"></i></button></span>
+			<span class="f-right button"><button id="bt_back"><i class="icon-arrow-left"></i> Back</button></span>
 		</header>
   
     <section class="main">    
-      <div id="scan_wristband"></div>
+      <div id="message" class="t-center">
+        <h1 id="tryAgainBox" class="t-center"></h1>
+      </div>		
+      <div id="thanks"></div>
   	</section>
     
     <script src="js/classie.js"></script>
