--- a/assets/www/check_credit_result.html
+++ b/assets/www/check_credit_result.html
@@ -34,12 +34,17 @@
 		</nav>
 		
 		<header id="main_bar">
-		  <span id="section_title">Check Credit</span>
+		  <span id="section_title">Check Credit - Result</span>
 			<span class="f-left button"><button id="showLeftPush"><i class="icon-reorder"></i></button></span>
 		</header>
   
     <section class="main">    
-      <div id="scan_wristband"></div>
+      <div id="message" class="t-center">
+        <p>You have:</p>
+        <h1 id="creditBox" class="positive_credit">€ 100.00</h1>
+        <h1 id="tryAgainBox" class="t-center"></h1>
+      </div>		
+      <div id="scan_wristband_another"></div>
   	</section>
     
     <script src="js/classie.js"></script>
