--- a/assets/www/add_credit_tap_load.html
+++ b/assets/www/add_credit_tap_load.html
@@ -2,45 +2,55 @@
 	<head>
 		<meta http-equiv="Content-type" content="text/html; charset=utf-8">
 		<meta name="viewport" id="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
-		
+		<!-- Generic headers - stylessheets and JS files -->
 		<link rel="stylesheet" type="text/css" href="style.css" />
-		
 		<script type="text/javascript" charset="utf-8" src="phonegap-nfc.js"></script>
 		<script type="text/javascript" charset="utf-8" src="cordova-2.6.0.js"></script> 
 		<script type="text/javascript" charset="utf-8" src="nfc.js"></script> 		
 		<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-		
+		<!-- Specific Headers -->
 		<script type="text/javascript" charset="utf-8" src="add_credit_tap_load.js"></script>
-	
-		
 		<script type="text/javascript" charset="utf-8">
   		function onBodyLoad(){
       	document.addEventListener("deviceready", onDeviceReady, true);
-		
-		}
-		
-		
-	
-	</script>
-	
+      }
+    </script>
 	</head>
 
- 
-<body onload="onBodyLoad();">
-<h4>In the Credit Tap Load Page </h4>
-
-	<h2 id="existingValue"></h2>
-
-	<h2 id="topupValue"></h2>
-	<h2 id="newValue"></h2>
-
-	<button id="revert">Revert</button>
-	<footer class="b_fixed">
-  	  	<ul class="form_footer_buttons">
-	  	  	<li><a href="index.html">Main Menu</a></li>		
-  	  	</ul>
-  	</footer>
+  <body class="cbp-spmenu-push" onload="onBodyLoad();">
+    <nav class="cbp-spmenu cbp-spmenu-vertical cbp-spmenu-left" id="cbp-spmenu-s1">
+			<h3><a href="index.html"><img src="images/logo1.png" alt="logo" /></a></h3>
+			<a href="#" class="current">Add Credit</a>
+			<a href="check_credit.html">Check Credit</a>
+			<a href="cart.html">Store</a>
+			<a href="#">Logout</a>
+		</nav>
+		<header id="main_bar">
+		  <span id="section_title">Tap to Load Credit</span>
+			<span class="f-left button"><button id="showLeftPush"><i class="icon-reorder"></i></button></span>
+		</header>
+  
+    <section class="main">
+      <div class="t-center m-bottom">
+        <p>You're about to add:</p>
+        <h1 id="existingValue" class="positive_credit">€ 100.00</h1>
+      </div>
+      
+      <div id="scan_tap_to_load"></div>
+    </section>
   	
- </body>
-  	
+    <script src="js/classie.js"></script>
+    <script>
+			var menuLeft = document.getElementById( 'cbp-spmenu-s1' ),
+				showLeftPush = document.getElementById( 'showLeftPush' ),
+				body = document.body;
+
+			showLeftPush.onclick = function() {
+				classie.toggle( this, 'active' );
+				classie.toggle( body, 'cbp-spmenu-push-toright' );
+				classie.toggle( menuLeft, 'cbp-spmenu-open' );
+				disableOther( 'showLeftPush' );
+			};
+		</script>
+   </body>
  </html>
