quantity counters working

--- a/assets/www/cart.html
+++ b/assets/www/cart.html
@@ -30,7 +30,7 @@
   
     <section class="main"> 
     	<div class="menu_list">
-      	<button id="beers" data-value="2.00" class="form_list selected_product">
+      	<button id="beers" data-value="2.00" class="form_list ">
         	<span class="quantity">90</span> Beer (&euro; 2.00)
         	<span class="delete_product"><a href="#" title="Delete Product?"><i class="icon-minus"></i></a></span>
         </button>
