fixing bug related to add credit

--- a/assets/www/add_credit_confirmation.html
+++ b/assets/www/add_credit_confirmation.html
@@ -7,6 +7,8 @@
 		<script type="text/javascript" charset="utf-8" src="phonegap-nfc.js"></script>
 		<script type="text/javascript" charset="utf-8" src="cordova-2.6.0.js"></script> 
 		<script type="text/javascript" charset="utf-8" src="nfc.js"></script> 		
+		<script type="text/javascript" charset="utf-8" src="add_credit_confirmation.js"></script> 		
+		
 		<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
 		<!-- Specific Headers -->
 		<script type="text/javascript" charset="utf-8" src="add_credit_tap_load.js"></script>
