--- a/assets/www/add_credit.html
+++ b/assets/www/add_credit.html
@@ -4,25 +4,18 @@
 		<meta name="viewport" id="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
 		<!-- Generic headers - stylessheets and JS files -->
 		<link rel="stylesheet" type="text/css" href="style.css" />
+		
 		<script type="text/javascript" charset="utf-8" src="phonegap-nfc.js"></script>
 		<script type="text/javascript" charset="utf-8" src="cordova-2.6.0.js"></script> 
 		<script type="text/javascript" charset="utf-8" src="cookie.js"></script>
-
 		<script type="text/javascript" charset="utf-8" src="nfc.js"></script> 		
-		
-		
 		<!-- Specific Headers -->
 
 		<script type="text/javascript" charset="utf-8" src="add_credit.js"></script> 		
-
-				
-			
-    </script>
-
+		<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+		<script src="http://code.jquery.com/mobile/1.3.1/jquery.mobile-1.3.1.min.js"></script>
 		<script type="text/javascript" charset="utf-8" src="nfc.js"></script> 				
-		<!-- Specific Headers -->
-		<script type="text/javascript" charset="utf-8" src="add_credit.js"></script> 				
-  </head>
+	 </head>
   <body class="cbp-spmenu-push" onload="onBodyLoad();">
     <nav class="cbp-spmenu cbp-spmenu-vertical cbp-spmenu-left" id="cbp-spmenu-s1">
 			<h3><a href="index.html"><img src="images/logo1.png" alt="logo" /></a></h3>
