--- a/assets/www/add_credit.html
+++ b/assets/www/add_credit.html
@@ -7,15 +7,16 @@
 		
 		<script type="text/javascript" charset="utf-8" src="phonegap-nfc.js"></script>
 		<script type="text/javascript" charset="utf-8" src="cordova-2.6.0.js"></script> 
-		<script type="text/javascript" charset="utf-8" src="cookie.js"></script>
 		<script type="text/javascript" charset="utf-8" src="nfc.js"></script> 		
 		<!-- Specific Headers -->
 
 		<script type="text/javascript" charset="utf-8" src="add_credit.js"></script> 		
 		<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
 		<script src="http://code.jquery.com/mobile/1.3.1/jquery.mobile-1.3.1.min.js"></script>
-		<script type="text/javascript" charset="utf-8" src="nfc.js"></script> 				
 	 </head>
+	 
+	 
+	 
   <body class="cbp-spmenu-push" onload="onBodyLoad();">
     <nav class="cbp-spmenu cbp-spmenu-vertical cbp-spmenu-left" id="cbp-spmenu-s1">
 			<h3><a href="index.html"><img src="images/logo1.png" alt="logo" /></a></h3>
@@ -24,16 +25,19 @@
 			<a href="cart.html">Store</a>
 			<a href="#">Logout</a>
 		</nav>
-		<header id="main_bar">
-		  <span id="section_title">Add Credit</span>
+	
+	
+	
+	<header id="main_bar">
+		<span id="section_title">Add Credit</span>
 			<span class="f-left button"><button id="showLeftPush"><i class="icon-reorder"></i></button></span>
-		</header>
+	</header>
   
     <section class="main">
-      <form name="topup_form" onsubmit="onDeviceReady();" class="form-5 form-vert clearfix">
+    	<form name="topup_form" onsubmit="call_confirmation_page();" class="form-5 form-vert clearfix">
   			<input id="add_credit_bt" type="text" name="topup_value" value="" placeholder="0.00"><br>
   			<input type="submit" name="add_credit_button" value="Add Credit" >
-    	</form>
+   		</form>
     	
     	<h1 id="user_messages" class="t-center m-bottom"></h1>
     </section>
@@ -50,6 +54,6 @@
 				classie.toggle( menuLeft, 'cbp-spmenu-open' );
 				disableOther( 'showLeftPush' );
 			};
-		</script>
+	</script>
   </body>
 </html>
