minor astetic changes. Code Stable. Version release v1.0.1

--- a/assets/www/add_credit_confirmation.html
+++ b/assets/www/add_credit_confirmation.html
@@ -45,7 +45,7 @@
       	</form>
       	-->
         <form id="payment_cart" action="add_credit.html" class="form_list">
-      		<input type="submit" name="add_credit_button" value="Go Back" >
+      		<input type="submit" name="add_credit_button" value="Add More Credit" >
       	</form>
       </div>
     </section>
